welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:3: error: not found: value ligne
    ligne()
    ^MethodsPicture:11: error: not found: value faireV
faireV(c:Color){
^MethodsPicture:11: error: not found: value c
faireV(c:Color){
       ^MethodsPicture:12: error: not found: value c
  setCouleurBrosse(c)
                   ^MethodsPicture:29: error: not found: value motif
motif(){
^MethodsPicture:30: error: not found: value faireV
  faireV(Color.yellow)
  ^MethodsPicture:31: error: not found: value faireV
  faireV(Color.red)
  ^MethodsPicture:32: error: not found: value faireV
  faireV(color.blue)
  ^MethodsPicture:32: error: not found: value color
  faireV(color.blue)
         ^MethodsPicture:33: error: not found: value faireV
  faireV(Color.green)
  ^MethodsPicture:35: error: not found: value ligne
ligne(){
^MethodsPicture:37: error: not found: value motif
    motif()
    ^