welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
	for (colonne<-1 to 3){
    ligne()
    gauche()
    for (move<-1 to 5){
      avance()
    }
  droite()
  }
}
faireV(c:Color){
  setCouleurBrosse(c)
  avance()
  baisseBrosse()
  leveBrosse()
  avance()
  gauche()
  avance()
  baisseBrosse()
  leveBrosse()
  recule()
  droite()
  avance()
  baisseBrosse()
  leveBrosse()
  avance()
  gauche()
}
motif(){
  faireV(Color.yellow)
  faireV(Color.red)
  faireV(color.blue)
  faireV(Color.green)
}
ligne(){
  for (compteur <-1 to 3){
    motif()
    for (move <-1 to 5){
      avance()
    }
  }
}